  24 Mar 2020;  <chymera@gentoo.org> +metadata.xml, RTbatch-9999.ebuild:
  app-misc/RTbatch: updated ebuild